# ChangeLog for app-text/apvlv
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Feb 2010; James Rowe <jnrowe@gmail.com> apvlv-0.0.9.2.ebuild:
  Keyworded amd64.

  14 Feb 2010; James Rowe <jnrowe@gmail.com> apvlv-0.0.9.ebuild,
  apvlv-0.0.9.2.ebuild, apvlv-0.0.9.3.ebuild:
  Updated poppler dependency, now that the virtuals are removed.

  07 Feb 2010; James Rowe <jnrowe@gmail.com> -apvlv-0.0.8.1.ebuild,
  apvlv-0.0.9.ebuild:
  Keyworded x86.

  07 Feb 2010; James Rowe <jnrowe@gmail.com> apvlv-0.0.9.ebuild:
  Keyworded amd64.

*apvlv-0.0.9.3 (06 Feb 2010)

  06 Feb 2010; James Rowe <jnrowe@gmail.com> +apvlv-0.0.9.3.ebuild:
  Version bump [c9b].

*apvlv-0.0.9.2 (26 Jan 2010)

  26 Jan 2010; James Rowe <jnrowe@gmail.com> +apvlv-0.0.9.2.ebuild:
  Version bump [5da].

  11 Jan 2010; James Rowe <jnrowe@gmail.com> -apvlv-0.0.7.5.ebuild,
  apvlv-0.0.8.1.ebuild:
  Keyworded x86.

  11 Jan 2010; James Rowe <jnrowe@gmail.com> apvlv-0.0.8.1.ebuild:
  Keyworded amd64.

  08 Jan 2010; James Rowe <jnrowe@gmail.com> apvlv-0.0.7.5.ebuild,
  apvlv-0.0.8.1.ebuild, apvlv-0.0.9.ebuild:
  Added .desktop entry.

  08 Jan 2010; James Rowe <jnrowe@gmail.com>
  files/apvlv-0.0.7.4-build_fixes.patch:
  Fixed mangled patch file.

*apvlv-0.0.9 (08 Jan 2010)

  08 Jan 2010; James Rowe <jnrowe@gmail.com> +apvlv-0.0.9.ebuild:
  Version bump [b35].

  22 Dec 2009; James Rowe <jnrowe@gmail.com> -apvlv-0.0.7.4.ebuild,
  apvlv-0.0.7.5.ebuild:
  Keyworded x86.

  22 Dec 2009; James Rowe <jnrowe@gmail.com> apvlv-0.0.7.5.ebuild:
  Keyworded amd64.

  14 Dec 2009; James Rowe <jnrowe@gmail.com> apvlv-0.0.8.1.ebuild,
  +files/apvlv-0.0.8.1-automagic_djvu.patch:
  Fix automagic djvu dependency [2ca]. Thanks to Jake Archer for reporting.

*apvlv-0.0.8.1 (12 Dec 2009)

  12 Dec 2009; James Rowe <jnrowe@gmail.com> +apvlv-0.0.8.1.ebuild:
  Version bump [cf8].

  06 Dec 2009; James Rowe <jnrowe@gmail.com> apvlv-0.0.7.4.ebuild,
  apvlv-0.0.7.5.ebuild: