@@ -5,16 +5,14 @@ AUX apvlv-0.0.7.4-build_fixes.patch 1636 RMD160 db3ad19d756282b921b54a58c7eda481
 AUX apvlv-0.0.8.1-automagic_djvu.patch 1063 RMD160 877277040ee456d50e71836d4df472f245d6582a SHA1 6fa01603f438dbdd2c6b07168354e58e42af68ca SHA256 a421373a3ded2e8e323be193f4ad5df456958670c3bc92fb3abcf8ddd9dbbb0b
 DIST apvlv-0.0.9.2.tar.gz 211694 RMD160 04d6e9f4c5466b8a8691de887cdcaedcf1ec173f SHA1 64dcc808f36f699adb40a453466d78ed4dd0702f SHA256 b579be571dec2273de026581e09624a57c7d2adabb318b998509b1d3032a88cb
 DIST apvlv-0.0.9.3.tar.gz 213558 RMD160 d54d84399c28f2986102bd7d698322db77ed5867 SHA1 87dc8a9bc282d67ab381aa53fa3d5cc9b4254471 SHA256 bcdea735160df759dc0f3ad12bb02a669b24d289d350cff81c32c0f000b26116
-DIST apvlv-0.0.9.tar.gz 209549 RMD160 01b6025cc88348f9f1edad3fe4227a215918f4bd SHA1 11d535f182b84cebf5ff7307328c1f1ca81de9a2 SHA256 f49353ea91b00e2cc8c1c7c1ee82aff0eedf60a81384b3232182492c916721b3
-EBUILD apvlv-0.0.9.2.ebuild 990 RMD160 9ce47a05018addefaf4929a062a6ce055b8bc7b6 SHA1 cca6387881a335e9a261ea6dcf5692f0331311c6 SHA256 0a5e79603b31bd0d27648bd9b9b78e6de4c5ef21e01b1f5b9f360f27a628b9fc
+EBUILD apvlv-0.0.9.2.ebuild 989 RMD160 1411294028a3978f0a38483989cccc29160b538a SHA1 a5a17f52ec23e4981a512a0868d9d62d4d132918 SHA256 88bf0ac9ca5e326680c4e6245fb865dabd9856835ac0a12088298ab205f56854
 EBUILD apvlv-0.0.9.3.ebuild 991 RMD160 f96c6584bd6db86a7aa0b96b4af12211f38fef89 SHA1 7da345640148f5fb56554afc0f52e3864ba44936 SHA256 84e05792bcd1bed2332764eb334413c66ae06238cf00cf5377c0763286c76014
-EBUILD apvlv-0.0.9.ebuild 989 RMD160 1411294028a3978f0a38483989cccc29160b538a SHA1 a5a17f52ec23e4981a512a0868d9d62d4d132918 SHA256 88bf0ac9ca5e326680c4e6245fb865dabd9856835ac0a12088298ab205f56854
-MISC ChangeLog 2745 RMD160 a3f36642e2b4932dfee5920a676b995436070d41 SHA1 ff7c0c4b6c0adba8a83c53d7c34af41f46e0d699 SHA256 02f9095d42692ebe457d3aeabbe309dbcaf12b2c1611098baa40293bce40365f
+MISC ChangeLog 2853 RMD160 ece668c9fd6abb7202ac06f939f57634c4d01d3d SHA1 2a2b0b382c7f3608b88f60c1262961b90c5ca762 SHA256 d0fd2ff57b0b75f3646bbf6a22a72f53a31aeb9b860d50c753072b25af1b8b43
 MISC metadata.xml 1007 RMD160 da4aa4cc94c9bfbff6ca9aeeb56a6e4054151446 SHA1 78433e2527bc801894f26cfb7d49fa2bd1fd154d SHA256 cc9665b1c0780cd4e37f6ea04fe70ac4a4686b3a6a47c795e6f4c1ccf9489de6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkuF4ZQACgkQzJrj3cAXR0ke7ACaAw4crtW5WqcoPUIIzY13KUj8
-29AAn15KK11pWxmhTVylkhUqVn8LhVq1
-=uS2s
+iEYEARECAAYFAkuHD3UACgkQzJrj3cAXR0mjHgCeJbpTrPWsTiqMrlcqaFfp/SEX
+5U0Anj6B4ZTZLcjfDS2RvvYKJ+Qn6KHA
+=vmIn
 -----END PGP SIGNATURE-----
