@@ -6,7 +6,7 @@ http://apvlv.googlecode.com/files/apvlv-0.0.9.2.tar.gz
 http://code.google.com/p/apvlv/
 GPL-2
 apvlv is a PDF Viewer which behaves like Vim
-amd64 ~x86
+amd64 x86
 autotools eutils libtool multilib portability toolchain-funcs
 djvu
 
