@@ -1,4 +1,3 @@
-REM 2010-02-25 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 app-text/apvlv-0.0.9.2 %a
 REM 2010-02-25 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 x11-wm/subtle-0.8.1710 %a
 REM 2010-02-27 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 www-client/cupage-0.4.0 %a
 REM 2010-02-27 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 www-client/cupage-0.4.0 %a
